// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> 자식 컴포넌트가 들어온 경우 그려준다 1`] = `
.c0 {
  display: inline-block;
  margin-right: 0.25rem;
  margin: 0.1875rem 0.375rem 0.1875rem 0;
  padding: 0.125rem 0.375rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 0.75rem;
  font-weight: 200;
  color: #424242;
  background-color: #EEEEEE;
  border-radius: 0.25rem;
}

<div
  class="c0"
>
  test
</div>
`;

exports[`<Tag /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: inline-block;
  margin-right: 0.25rem;
  margin: 0.1875rem 0.375rem 0.1875rem 0;
  padding: 0.125rem 0.375rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 0.75rem;
  font-weight: 200;
  color: #424242;
  background-color: #EEEEEE;
  border-radius: 0.25rem;
}

<div
  class="c0"
/>
`;
